@@ -1,35 +1,43 @@
 # -*-makefile-*-
 .PHONY: all clean dist menuify nl out scripts site TAGS tree
 
-PYTHON=python
-SCRIPTS=$(wildcard *.py *.scm) 
-SCRIPTDIR=scripts
+PYTHON = python
+SCRIPTS = $(wildcard *.py *.scm) 
+SCRIPTDIR = scripts
 
-VERSION=1.0
-DISTDIR=lily-web-$(VERSION)
+VERSION = 1.0
+DISTDIR = lily-web-$(VERSION)
 
 FILES = GNUmakefile newweb.css $(HTML) $(NON_HTML) $(SCRIPTS) 
 
-outball=site.tar.gz
+outball = site.tar.gz
 
+LANG =
 SITE = site
-EXT = .jpeg .ly .pdf .png
-##HTML = $(shell cd site && find . -name '*.html')
-##HTML = $(shell find $(SITE) -name '*.html')
-HTML_SITE = $(shell find site -name '*.html')
-HTML = $(HTML_SITE:site/%=$(SITE)/%)
-NON_HTML = $(shell cd site && find . -false $(EXT:%=-or -name '*%'))
-##TREE = $(shell find $(SITE) -type d -not -name CVS)
-TREE_SITE = $(shell find site -type d -not -name CVS)
-TREE = $(TREE_SITE:site/%=$(SITE)/%)
-PY = $(shell find scripts site -name '*.py')
 
-ifneq ($(SITE),site)
-mo = out/locale/$(SITE)/LC_MESSAGES/newweb.mo
+ifneq ($(LANG),)
+SITE = $(LANG)
+mo = out/locale/$(LANG)/LC_MESSAGES/newweb.mo
+po/$(LANG).po: po/newweb.pot
+	msgmerge $@ $^ > $@.new
+# only update upon success
+	mv $@.new $@
+
+$(mo): po/$(LANG).po
+	mkdir -p $(dir $@)
+	msgfmt --output=$@ $< 
 endif
 
+EXT = .jpeg .ly .pdf .png
+HTML = $(shell find $(SITE) -name '*.html')
+NON_HTML = $(shell find site -false $(EXT:%=-or -name '*%'))
+TREE = $(shell cd site && find . -type d -not -name CVS)
+PY = $(shell find scripts site -name '*.py')
 
-all: scripts $(mo) menuify
+# not yet
+# LANGUAGES = nl
+
+all: scripts linktree menuify $(LANGUAGES)
 
 scripts:
 	python $(SCRIPTDIR)/big-page.py site/about/automated-engraving
@@ -44,36 +52,28 @@ dummy:
 
 po/newweb.pot: dummy
 	xgettext --default-domain=newweb --output-dir=po $(PY)
-	#mv po/newweb.po $@
-
-po/$(SITE).po: po/newweb.pot
-	msgmerge $@ $^ > $@.new
-	# only update upon success
-	mv $@.new $@
-
-$(mo): po/$(SITE).po
-	mkdir -p $(dir $@)
-	msgfmt --output=$@ $< 
+#	mv po/newweb.po $@
 
 nl: all
-	$(MAKE) SITE=nl all
+	$(MAKE) LANG=nl menuify
 
 new:
-	mkdir -p $(TREE:site/%=$(LANG)/%)
+	mkdir -p $(LANG)
+	cd $(LANG) && mkdir -p $(TREE)
 #	$(foreach i, $(HTML), cp -i $(i) $(LANG)/$(i:site/%=%) &&) true
 
 tree:
-	rm -rf out/$(SITE)
-#	mkdir -p $(TREE:%=out/$(SITE)/%)
-	mkdir -p $(TREE:%=out/%)
+	rm -rf out/site/$(LANG)
+	mkdir -p out/site/$(LANG)
+	cd out/site/$(LANG) && mkdir -p $(TREE)
 
-menuify: tree
-	$(foreach i, $(NON_HTML), \
-		(ln $(SITE)/$i out/$(SITE)/$i 2>/dev/null \
-			|| ln site/$i out/$(SITE)/$i) &&) true
-	LANG=$(SITE) $(PYTHON) $(SCRIPTDIR)/format-page.py --outdir=out $(HTML)
+menuify: $(mo)
+	LANG=$(LANG) $(PYTHON) $(SCRIPTDIR)/format-page.py --outdir=out $(HTML)
+
+linktree: tree
+	$(foreach i, $(NON_HTML), ln $i out/$i &&) true
 	cd out && touch .xvpics && rm -rf $$(find -name .xvpics)
-	ln newweb.css out/$(SITE)
+	ln newweb.css out/site/
 
 out/$(outball): site
 	cd out && tar czvf $(outball) site 
