@@ -1,3 +1,8 @@
+2005-01-27  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* GNUmakefile: 
+	* scripts/format-page.py: Update i18n.
+
 2005-01-25  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* site/index.html: Simplify.  Move style attributes to newweb.css.
